--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongodb": "^6.7.0",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "ws": "^8.17.0"
   }
 }
